==> jlswcx/mcu/MPLAB-X/library/nrf24l01.c <==
#include "nrf24l01.h"
#include "macro.h"
#define     _XTAL_FREQ        _XTAL_FREQ_125K       // 当前工程使用频率定义
#define     NRF_CE_DIR          TRISA0
#define     NRF_CE              RA0         // 24L01片选信号 拉高电平 发送接收数据
#define     NRF_CSN_DIR         TRISA2
#define     NRF_CSN             RA2         // SPI SS 片选
#define     NRF_SCK_DIR         TRISC0
#define     NRF_SCK             RC0
#define     NRF_MOSI_DIR        TRISC1
#define     NRF_MOSI            RC1
#define     NRF_MISO_DIR        TRISC2
#define     NRF_MISO            RC2
#define     NRF_IRQ_DIR         TRISA4      // 有的没有适用此接口
#define     NRF_IRQ             RA4
#define     NRF_EN_DIR          TRISA5
#define     NRF_EN              RA5

void NRF_SPI_Init(void) {  
    SSP1STAT = 0x00;
    SSP1STATbits.CKE = 1;           // 时钟状态从空闲转换到有效时发送

    SSP1BUF = 0;                    // 清除缓存
    SSP1IF = 0;                     // 清除中断标志位          
    SSP1CON1 = 0x20;                // 使能SPI串口通信      
}

unsigned char NRF_SPI_RW(unsigned char dat) {
    SSP1IF = 0;                     // 
    SSP1BUF = dat;
    while(!SSP1IF);                 // 写完成后BF置1，读取SSP1BUF后BF会被清零
    
    return(SSP1BUF);
}

void NRF_RX_Mode() {
    
    unsigned char enaa = 0x00;
    
    NRF_CE = 0;	  
    

    NRF_Write_Buf(NRF_W_REGISTER + NRF_RX_ADDR_P0, RX_ADDRESS_P0, 5);       // Use the same address on the RX device as the TX device
                                                                                // Select same RX payload width as TX Payload width
    NRF_Write_Buf(NRF_W_REGISTER + NRF_RX_ADDR_P1, RX_ADDRESS_P1, 5);       
    NRF_Write_Buf(NRF_W_REGISTER + NRF_RX_ADDR_P2, RX_ADDRESS_P2, 1);
    NRF_Write_Buf(NRF_W_REGISTER + NRF_RX_ADDR_P3, RX_ADDRESS_P3, 1);
    NRF_Write_Buf(NRF_W_REGISTER + NRF_RX_ADDR_P4, RX_ADDRESS_P4, 1);
    NRF_Write_Buf(NRF_W_REGISTER + NRF_RX_ADDR_P5, RX_ADDRESS_P5, 1);

  
    NRF_Write_Reg(NRF_W_REGISTER + NRF_EN_AA, 0x3F);                            // Enable Auto.Ack:Pipe0 使能所有通道自动应答
    NRF_Write_Reg(NRF_W_REGISTER + NRF_EN_RXADDR, 0x3F);                        // Enable Pipe0 使能所有通道接收数据
    NRF_Write_Reg(NRF_W_REGISTER + NRF_RF_CH, 40);                              // Select RF channel 40
     
    NRF_Write_Reg(NRF_W_REGISTER + NRF_RX_PW_P0, RX_PLOAD_WIDTH); 
    NRF_Write_Reg(NRF_W_REGISTER + NRF_RX_PW_P1, RX_PLOAD_WIDTH); 
    NRF_Write_Reg(NRF_W_REGISTER + NRF_RX_PW_P2, RX_PLOAD_WIDTH); 
    NRF_Write_Reg(NRF_W_REGISTER + NRF_RX_PW_P3, RX_PLOAD_WIDTH); 
    NRF_Write_Reg(NRF_W_REGISTER + NRF_RX_PW_P4, RX_PLOAD_WIDTH); 
    NRF_Write_Reg(NRF_W_REGISTER + NRF_RX_PW_P5, RX_PLOAD_WIDTH); 
      
      
    
    NRF_Write_Reg(NRF_W_REGISTER + NRF_RF_SETUP, 0x0f);                         // TX_PWR:0dBm, Datarate:2Mbps, LNA:HCURR
    NRF_Write_Reg(NRF_W_REGISTER + NRF_CONFIG, 0x0f);                           // Set PWR_UP bit, enable CRC(2 bytes) & Prim:RX. RX_DR enabled..   

    NRF_CE = 1;                                                                 // CE为高,进入接收模式   
    
    __delay_us(200);
}
