==> jlswcx/mcu/Atmel-Studio/WirelessPad/WirelessPad/src/nrf24l01.c <==
#include "nrf24l01.h"
#include "stdlib.h"
#include <avr/io.h>
#include "io_168pa.h"
#include <util/delay.h>
#define		NRF_MOSI_DIR	DDRB3
#define		NRF_MOSI		PORTB3
#define		NRF_MISO_DIR	DDRB4
#define		NRF_MISO		PORTB4
#define		NRF_SCK_DIR		DDRB5
#define		NRF_SCK			PORTB5
#define     NRF_CE_DIR      DDRC4
#define		NRF_CE			PORTC4			// 第一个NRF使能端口
#define		NRF_CSN_DIR		DDRD7
#define		NRF_CSN			PORTD7			// 第一个NRF片选端口
#define     NRF_CE2_DIR     DDRD4
#define		NRF_CE2			PORTD4			// 第二个NRF使能端口
#define		NRF_CSN2_DIR	DDRD2
#define		NRF_CSN2		PORTD2			// 第二个NRF片选端口

void NRF_SPI_Init(void) {
	SPCRbit->SPIE = 0;			// 中断使能位 需使用SPIF和SREG全局中断
	SPCRbit->SPE  = 1;			// 使能SPI
	SPCRbit->DORD = 0;			// 数据发送顺序，0 高位先发送  1 低位先发送
	SPCRbit->MSTR = 1;			// 主模式
	SPCRbit->CPOL = 0;			// SCK空闲时为低电平
	SPCRbit->CPHA = 0;			// 0 起始沿采样 1 结束沿采样
	
	SPSR = 0;					// 状态寄存器	
}

unsigned char NRF_SPI_RW(unsigned char dat) {
	SPDR = dat;
	while(!SPSRbit->SPIF);
	dat = SPDR;
	
	SPSR = 0;
	
	return dat;
}

void NRF_RX_Mode(unsigned char num) {
    
	if (num == 1) {
		NRF_CE = 0;
		}else if(num == 2) {
		NRF_CE2 = 0;
	}
    
    NRF_Write_Buf(num, NRF_W_REGISTER + NRF_RX_ADDR_P0, RX_ADDRESS_P0, 5);   // Use the same address on the RX device as the TX device
    NRF_Write_Buf(num, NRF_W_REGISTER + NRF_RX_ADDR_P1, RX_ADDRESS_P1, 5);
    NRF_Write_Buf(num, NRF_W_REGISTER + NRF_RX_ADDR_P2, RX_ADDRESS_P2, 1);
    NRF_Write_Buf(num, NRF_W_REGISTER + NRF_RX_ADDR_P3, RX_ADDRESS_P3, 1);
    NRF_Write_Buf(num, NRF_W_REGISTER + NRF_RX_ADDR_P4, RX_ADDRESS_P4, 1);
    NRF_Write_Buf(num, NRF_W_REGISTER + NRF_RX_ADDR_P5, RX_ADDRESS_P5, 1);
  
  
    NRF_Write_Reg(num, NRF_W_REGISTER + NRF_EN_AA, 0x3F);                // Enable Auto.Ack:Pipe0 使能所有通道自动应答
    NRF_Write_Reg(num, NRF_W_REGISTER + NRF_EN_RXADDR, 0x3F);            // Enable Pipe0 使能所有通道接收数据
    NRF_Write_Reg(num, NRF_W_REGISTER + NRF_RF_CH, 40);                  // Select RF channel 40
    NRF_Write_Reg(num, NRF_W_REGISTER + NRF_RX_PW_P0, RX_PLOAD_WIDTH);   // Select same RX payload width as TX Payload width
    NRF_Write_Reg(num, NRF_W_REGISTER + NRF_RX_PW_P1, RX_PLOAD_WIDTH);   // Select same RX payload width as TX Payload width
    NRF_Write_Reg(num, NRF_W_REGISTER + NRF_RX_PW_P2, RX_PLOAD_WIDTH);   // Select same RX payload width as TX Payload width
    NRF_Write_Reg(num, NRF_W_REGISTER + NRF_RX_PW_P3, RX_PLOAD_WIDTH);   // Select same RX payload width as TX Payload width
    NRF_Write_Reg(num, NRF_W_REGISTER + NRF_RX_PW_P4, RX_PLOAD_WIDTH);   // Select same RX payload width as TX Payload width
    NRF_Write_Reg(num, NRF_W_REGISTER + NRF_RX_PW_P5, RX_PLOAD_WIDTH);   // Select same RX payload width as TX Payload width
    NRF_Write_Reg(num, NRF_W_REGISTER + NRF_RF_SETUP, 0x0f);             // TX_PWR:0dBm, Datarate:2Mbps, LNA:HCURR
    NRF_Write_Reg(num, NRF_W_REGISTER + NRF_CONFIG, 0x0f);               // Set PWR_UP bit, enable CRC(2 bytes) & Prim:RX. RX_DR enabled..   

   	if (num == 1) {
	   	NRF_CE = 1;													// CE为高,进入接收模式   
	   	}else if(num == 2) {
	   	NRF_CE2 = 1;
   	}                                                    
    
    _delay_us(150);                                                // 130?s后检测信号
}
